--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
         <div class="row">
             <div class="col col-xs-12 col-sm-6">
                 <div class="afiche">
-                    <img src="images/afiche/tintosblancos.png" alt="Tintos y blancos" class="info-evento img-responsive">
+                    <img src="images/afiche/korales.jpg" alt="Los Korales" class="info-evento img-responsive">
                 </div>
                 
                 
                 <div class="text-center">
-                    <p><a href="https://goo.gl/maps/DJzugZNnxg42"><strong>Ubicación</strong></a></p>    
+                    <p><a href="https://goo.gl/maps/k3spSBGCd1K2"><strong>Ubicación</strong></a></p>    
                 </div>
             </div>
             <div class="col col-sm-6 hidden-xs">
                 <div class="info-evento-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.886930090984!2d-84.15209598610556!3d9.943364976737248!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0fb86de82a17f%3A0x9698bf19e30f147!2sTintos+%26+Blancos!5e0!3m2!1ses-419!2s!4v1487212823096" frameborder="0" style="border:0" class="info-evento-map" allowfullscreen></iframe>
+                	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.6555455201433!2d-84.06216058578212!3d9.96258969287679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e4f56944e42d%3A0x90433bfe1c13c8e!2sLos+Korales!5e0!3m2!1ses-419!2s!4v1493698227492" frameborder="0" style="border:0" allowfullscreen></iframe>                    
                 </div>
             </div>
         </div>
