--- a/acercade.html
+++ b/acercade.html
@@ -217,11 +217,11 @@
                     if (d.getElementById(id)) return;
                     js = d.createElement(s);
                     js.id = id;
-                    js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.8&appId=752701358126278";
+                    js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.9&appId=752701358126278";
                     fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));
                 </script>
-                <div class="fb-share-button" data-href="https://adagiogitano.github.io/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fadagiogitano.github.io%2F&amp;src=sdkpreparse">Compartir</a></div>
+                <div class="fb-like" data-href="https://adagiogitano.github.io/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
             </div>
         </section>
     </footer>
