--- a/contacto.html
+++ b/contacto.html
@@ -72,13 +72,13 @@
                     </li>
                     <li>
                         <a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a>
-                    </li>                    
+                    </li>
                     <li>
                         <a href="https://www.youtube.com/channel/UC7lAj9rbe-RMn0ML6EPKGvQ" class="yt icono" target="_blank"></a>
                     </li>
                 </ul>
             </div>
-             <div class="footer-share">
+            <div class="footer-share">
                 <div id="fb-root"></div>
                 <script>
                 (function(d, s, id) {
@@ -86,11 +86,11 @@
                     if (d.getElementById(id)) return;
                     js = d.createElement(s);
                     js.id = id;
-                    js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.8&appId=752701358126278";
+                    js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.9&appId=752701358126278";
                     fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));
                 </script>
-                <div class="fb-share-button" data-href="https://adagiogitano.github.io/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fadagiogitano.github.io%2F&amp;src=sdkpreparse">Compartir</a></div>
+                <div class="fb-like" data-href="https://adagiogitano.github.io/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
             </div>
         </section>
     </footer>
