--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <main class="container informacion-index">
         <div class="row">
             <div class="col-xs-12 col3 text-center">
-                <h1>Adagio Gitano</h1>                
+                <h1>Adagio Gitano</h1>
             </div>
         </div>
         <div class="row">
@@ -124,15 +124,13 @@
                 <div class="afiche">
                     <img src="images/afiche/korales.jpg" alt="Los Korales" class="info-evento img-responsive">
                 </div>
-                
-                
                 <div class="text-center">
-                    <p><a href="https://goo.gl/maps/k3spSBGCd1K2"><strong>Ubicación</strong></a></p>    
+                    <p><a href="https://goo.gl/maps/k3spSBGCd1K2"><strong>Ubicación</strong></a></p>
                 </div>
             </div>
             <div class="col col-sm-6 hidden-xs">
                 <div class="info-evento-map">
-                	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.6555455201433!2d-84.06216058578212!3d9.96258969287679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e4f56944e42d%3A0x90433bfe1c13c8e!2sLos+Korales!5e0!3m2!1ses-419!2s!4v1493698227492" frameborder="0" style="border:0" allowfullscreen ></iframe>                    
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.6555455201433!2d-84.06216058578212!3d9.96258969287679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e4f56944e42d%3A0x90433bfe1c13c8e!2sLos+Korales!5e0!3m2!1ses-419!2s!4v1493698227492" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -161,11 +159,11 @@
                     if (d.getElementById(id)) return;
                     js = d.createElement(s);
                     js.id = id;
-                    js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.8&appId=752701358126278";
+                    js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.9&appId=752701358126278";
                     fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));
                 </script>
-                <div class="fb-share-button" data-href="https://adagiogitano.github.io/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fadagiogitano.github.io%2F&amp;src=sdkpreparse">Compartir</a></div>
+                <div class="fb-like" data-href="https://adagiogitano.github.io/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
             </div>
         </section>
     </footer>
