se cambia el boton de me gusta y compartir

--- a/acercade.html
+++ b/acercade.html
@@ -51,11 +51,7 @@
                 <div class="text-acercade">
                     <p class="text-justify">
                         La idea de formar un grupo surge a mediados del año 2014, cuando <strong>Jose Fuentes</strong> y
-                        <strong>Manuel Illescas</strong> deciden iniciar un proyecto de música que fusionara distintos géneros,
-                        para ello contactan a <strong>Carlos Jiménez</strong> y <strong>Gabriel Villavicencio</strong>, que se incorporan en el
-                        grupo cuyo nombre queda decidido como Adagio Gitano. Inicialmente se trabaja con
-                        ritmos latinoamericanos, pero también se logran integrar conceptos como funk, blues,
-                        bossa-nova y tango, los cuales dieron lugar a música original instrumental en sus inicios.
+                        <strong>Manuel Illescas</strong> deciden iniciar un proyecto de música que fusionara distintos géneros, para ello contactan a <strong>Carlos Jiménez</strong> y <strong>Gabriel Villavicencio</strong>, que se incorporan en el grupo cuyo nombre queda decidido como Adagio Gitano. Inicialmente se trabaja con ritmos latinoamericanos, pero también se logran integrar conceptos como funk, blues, bossa-nova y tango, los cuales dieron lugar a música original instrumental en sus inicios.
                     </p>
                 </div>
             </div>
@@ -67,18 +63,10 @@
             <div class="col-acercade2 col-xs-12">
                 <div class="text-acercade1">
                     <p class="text-justify">
-                        Posteriormente se dan una serie de movimientos en el grupo, la salida de Manuel
-                        Illescas y la llegada de <strong>Jair Sherrier</strong> en la guitarra y de <strong>Yanelly Ramírez</strong> como vocalista,
-                        iniciando con covers latinoamericanos mientras, a la vez, se seguía promocionando la
-                        música instrumental original                       
+                        Posteriormente se dan una serie de movimientos en el grupo, la salida de Manuel Illescas y la llegada de <strong>Jair Sherrier</strong> en la guitarra y de <strong>Yanelly Ramírez</strong> como vocalista, iniciando con covers latinoamericanos mientras, a la vez, se seguía promocionando la música instrumental original
                     </p>
                     <p class="text-justify">
-                        <h3>¿Por qué Adagio Gitano? </h3>
-
-                        Adagio (del italiano) es un término musical que hace referencia a una indicación de
-                        tempo, o bien a un movimiento de una pieza musical. Adagio Gitano maneja muchos de
-                        los tempos que se manejan en las canciones se encuentran en Adagio, de esta forma
-                        surge y se mantiene el nombre.
+                        <h3>¿Por qué Adagio Gitano? </h3> Adagio (del italiano) es un término musical que hace referencia a una indicación de tempo, o bien a un movimiento de una pieza musical. Adagio Gitano maneja muchos de los tempos que se manejan en las canciones se encuentran en Adagio, de esta forma surge y se mantiene el nombre.
                     </p>
                 </div>
             </div>
@@ -93,13 +81,7 @@
                         <strong>1. Jose Fuentes: Guitarrista</strong>
                     </p>
                     <p>
-                        Guitarrista clásico graduado de la Universidad de
-                        Costa Rica. Educador musical y arreglista en la
-                        agrupación Adagio Gitano. Con experiencia
-                        como solista clásico y con el guitarrista checo
-                        Pavel Stedil y trío de jazz André Jaune.
-                        Presentaciones como solista en Italia, Hungría y
-                        México
+                        Guitarrista clásico graduado de la Universidad de Costa Rica. Educador musical y arreglista en la agrupación Adagio Gitano. Con experiencia como solista clásico y con el guitarrista checo Pavel Stedil y trío de jazz André Jaune. Presentaciones como solista en Italia, Hungría y México
                     </p>
                 </div>
             </div>
@@ -111,19 +93,7 @@
                         <strong>2. Carlos Jiménez: Percusionista</strong>
                     </p>
                     <p>
-                        Su amor por la música y su interés por los instrumentos musicales existe desde su niñez.
-                        En específico el área de la percusión inició desde
-                        pequeño formando parte cada año de las bandas
-                        que desfilan en las celebraciones de cada 15 de
-                        septiembre. Sin embargo fue hasta 2009 que se
-                        involucré más a fondo con el mundo de la
-                        percusión, primero con la batería,
-                        posteriormente timbal y cajón peruano. Inició en
-                        clases con el maestro Ronald. Desde el 2010
-                        hasta hoy, él lo ha ayudado a desarrollar su
-                        sonido. Realmente todos los géneros musicales
-                        son de suagrado, no obstante tiene una inclinación especial por los ritmos latinos y
-                        sonidos funk.
+                        Su amor por la música y su interés por los instrumentos musicales existe desde su niñez. En específico el área de la percusión inició desde pequeño formando parte cada año de las bandas que desfilan en las celebraciones de cada 15 de septiembre. Sin embargo fue hasta 2009 que se involucré más a fondo con el mundo de la percusión, primero con la batería, posteriormente timbal y cajón peruano. Inició en clases con el maestro Ronald. Desde el 2010 hasta hoy, él lo ha ayudado a desarrollar su sonido. Realmente todos los géneros musicales son de suagrado, no obstante tiene una inclinación especial por los ritmos latinos y sonidos funk.
                     </p>
                 </div>
             </div>
@@ -141,10 +111,10 @@
                         <strong>3. Anthony Wright: Trompetista</strong>
                     </p>
                     <p class="text-justify">
-                        Es estudiante intermedio desde el 2009 del Instituto Nacional de la Música, inició a los 9 años con flauta dulce, 3 años después se dedicó a la trompeta, actualmente es trompetista de la Orquesta y Banda Intermedia de Costa Rica y tuvo la experiencia de tocar en unos cuantos conciertos con la Orquesta Sinfónica Juvenil. Ha tocado en varios conjuntos con distintos estilos de música, desde el clásico hasta el popular, tocando por medio de conjuntos, o individualmente.  
+                        Es estudiante intermedio desde el 2009 del Instituto Nacional de la Música, inició a los 9 años con flauta dulce, 3 años después se dedicó a la trompeta, actualmente es trompetista de la Orquesta y Banda Intermedia de Costa Rica y tuvo la experiencia de tocar en unos cuantos conciertos con la Orquesta Sinfónica Juvenil. Ha tocado en varios conjuntos con distintos estilos de música, desde el clásico hasta el popular, tocando por medio de conjuntos, o individualmente.
                     </p>
                 </div>
-            </div>            
+            </div>
         </div>
         <div class="row">
             <div class="col-acercade5 col-xs-12 col-sm-6 info">
@@ -153,7 +123,7 @@
                         <strong>4. Carolina Figueroa Mesén</strong>
                     </p>
                     <p class="text-justify">
-                       Descubrió el canto a las 16 años, cuando ingresó a un coro eclesiástico en donde aprendió herramientas básicas de canto. Su primera experiencia como vocalista principal fue a los 18 años, cuando fue invitada a formar parte de un grupo de música popular. Más adelante formó parte del coro de la universidad de Costa Rica durante un corto periodo. Ha cantado como vocalista principal en diversas agrupaciones musicales, cantando covers tanto en inglés como en español. Formó parte de una agrupación tributo a Pink Floyd ayudando como corista en la misma, fue invitada a formar parte de la primera presentación de la Orquesta de Humanidades de la Universidad de Costa Rica, realizada en el teatro Eugene O'Niel en el año 2015. Actualmente forma parte de varias agrupaciones como Adagio Gitano y el proyecto Inara como corista de este último.
+                        Descubrió el canto a las 16 años, cuando ingresó a un coro eclesiástico en donde aprendió herramientas básicas de canto. Su primera experiencia como vocalista principal fue a los 18 años, cuando fue invitada a formar parte de un grupo de música popular. Más adelante formó parte del coro de la universidad de Costa Rica durante un corto periodo. Ha cantado como vocalista principal en diversas agrupaciones musicales, cantando covers tanto en inglés como en español. Formó parte de una agrupación tributo a Pink Floyd ayudando como corista en la misma, fue invitada a formar parte de la primera presentación de la Orquesta de Humanidades de la Universidad de Costa Rica, realizada en el teatro Eugene O'Niel en el año 2015. Actualmente forma parte de varias agrupaciones como Adagio Gitano y el proyecto Inara como corista de este último.
                     </p>
                 </div>
             </div>
@@ -171,19 +141,10 @@
                         <strong>5. Gabriel Villavicencio: Bajista</strong>
                     </p>
                     <p class="text-justify">
-                        Gabriel Villavicencio Herrera, estudiante
-                        de bajo eléctrico de Marco Chiqui Ortiz
-                        contrabajista de la sinfónica nacional y bajista.
-                        Después el 15 de agosto del 2016,
-                        estudió con el curso en línea Bajissimo
-                        del profesor Marco Chiqui Ortiz.
-                        Actualmente estudiante de contrabajo
-                        de Julián Córdoba en la academia musical
-                        de Moravia actualmente estudiante de contrabajo
-                        en la Universidad de Costa Rica.
+                        Gabriel Villavicencio Herrera, estudiante de bajo eléctrico de Marco Chiqui Ortiz contrabajista de la sinfónica nacional y bajista. Después el 15 de agosto del 2016, estudió con el curso en línea Bajissimo del profesor Marco Chiqui Ortiz. Actualmente estudiante de contrabajo de Julián Córdoba en la academia musical de Moravia actualmente estudiante de contrabajo en la Universidad de Costa Rica.
                     </p>
                 </div>
-            </div>            
+            </div>
         </div>
         <div class="row">
             <div class="col-acercade3 col-xs-12 hidden-xs">
@@ -221,7 +182,7 @@
                     fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));
                 </script>
-                <div class="fb-like" data-href="https://adagiogitano.github.io/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+                <div class="fb-like" data-href="https://adagiogitano.github.io/" data-layout="button" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
             </div>
         </section>
     </footer>
