--- a/contacto.html
+++ b/contacto.html
@@ -90,7 +90,7 @@
                     fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));
                 </script>
-                <div class="fb-like" data-href="https://adagiogitano.github.io/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+                <div class="fb-like" data-href="https://adagiogitano.github.io/" data-layout="button" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
             </div>
         </section>
     </footer>
