se modifican imagenes y eventos

--- a/acercade.html
+++ b/acercade.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="multimedia.html">Multimedia</a></li>
+                        <li><a href="multimedia.html">Multimedia</a></li>                        
                         <li class="active"><a href="acercade.html">Acerca de<span class="sr-only">(current)</span></a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -103,7 +103,7 @@
         </div>
         <div class="row">
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/integrantes/Anthony2.jpg" class="img-responsive image-acerca1" alt="Anthony" />
+                <img src="images/integrantes/anthony.jpg" class="img-responsive image-acerca1" alt="Anthony" />
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
                 <div class="text-acercade4">
@@ -116,25 +116,8 @@
                 </div>
             </div>
         </div>
+        
         <div class="row">
-            <div class="col-acercade5 col-xs-12 col-sm-6 info">
-                <div class="text-acercade5">
-                    <p class="text-justify">
-                        <strong>4. Carolina Figueroa Mesén</strong>
-                    </p>
-                    <p class="text-justify">
-                        Descubrió el canto a las 16 años, cuando ingresó a un coro eclesiástico en donde aprendió herramientas básicas de canto. Su primera experiencia como vocalista principal fue a los 18 años, cuando fue invitada a formar parte de un grupo de música popular. Más adelante formó parte del coro de la universidad de Costa Rica durante un corto periodo. Ha cantado como vocalista principal en diversas agrupaciones musicales, cantando covers tanto en inglés como en español. Formó parte de una agrupación tributo a Pink Floyd ayudando como corista en la misma, fue invitada a formar parte de la primera presentación de la Orquesta de Humanidades de la Universidad de Costa Rica, realizada en el teatro Eugene O'Niel en el año 2015. Actualmente forma parte de varias agrupaciones como Adagio Gitano y el proyecto Inara como corista de este último.
-                    </p>
-                </div>
-            </div>
-            <div class="col-acercade5 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/integrantes/carolina.jpeg" class="img-responsive image-acerca5" alt="carolina" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/integrantes/gabriel.png" alt="Gabriel" class="img-responsive image-acerca1" />
-            </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
                 <div class="text-acercade6">
                     <p class="text-justify">
@@ -145,11 +128,14 @@
                     </p>
                 </div>
             </div>
+            <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
+                <img src="images/integrantes/gabriel.png" alt="Gabriel" class="img-responsive image-acerca1" />
+            </div>            
         </div>
         <div class="row">
-            <div class="col-acercade3 col-xs-12 hidden-xs">
+            <div class="col-acercade3 col-xs-12 ">
                 <div>
-                    <img src="images/actual.jpg" alt="Adagio Gitano" class="img-responsive image-acercade xs-hidden" />
+                    <img src="images/img-acercade.jpg" alt="Adagio Gitano" class="img-responsive image-acercade xs-hidden" />
                 </div>
             </div>
         </div>
