--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html" class="active">Inicio<span class="sr-only">(current)</span></a></li>
-                        <li><a href="multimedia.html">Multimedia</a></li>
+                        <li><a href="multimedia.html">Multimedia</a></li>                        
                         <li><a href="acercade.html">Acerca de</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -65,38 +65,30 @@
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
                     <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel" data-slide-to="1"></li>
+                    <li data-target="#carousel" data-slide-to="1" ></li>
                     <li data-target="#carousel" data-slide-to="2"></li>
                     <li data-target="#carousel" data-slide-to="3"></li>
-                    <li data-target="#carousel" data-slide-to="4"></li>
-                    <li data-target="#carousel" data-slide-to="5"></li>
                 </ol>
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="images/carousel/zinco1.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
+                        <img src="images/carousel/grupo2.jpeg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
                         <div class="carousel-caption">
-                            <h3>Zinco Jazz Club - Ciudad de México </h3>
+                            <h3>Adagio Gitano</h3>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="images/carousel/zinco2.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
-                    </div>
-                    <div class="item">
-                        <img src="images/carousel/zinco3.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
-                    </div>
-                    <div class="item">
-                        <img src="images/carousel/breve1.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
-                        <div class="carousel-caption">
-                            <h3>Breve Espacio - Puebla</h3>
-                        </div>
+                        <img src="images/carousel/guatemala.jpeg" alt="Adagio Gitano" class="img-responsive carousel-img" />
                     </div>
                     <div class="item">
                         <img src="images/carousel/breve2.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
-                    </div>
+                        <div class="carousel-caption">
+                            <h3>Breve Espacio - Puebla</h3>
+                        </div>
+                    </div>                    
                     <div class="item">
                         <img src="images/carousel/breve3.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
-                    </div>
+                    </div>   
                 </div>
                 <!-- Controls -->
                 <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
@@ -122,15 +114,30 @@
         <div class="row">
             <div class="col col-xs-12 col-sm-6">
                 <div class="afiche">
-                    <img src="images/afiche/afichepapapez.jpg" alt="afiche PAPA PEZ" class="info-evento img-responsive">
+                    <img src="images/afiche/loboestepario.png" alt="El Lobo Estepario" class="info-evento img-responsive">
                 </div>
                 <div class="text-center">
-                    <p><a href="https://goo.gl/maps/uquvmDRHPcx"><strong>Ubicación</strong></a></p>
+                    <p><a href="https://goo.gl/maps/qVKfpj9q77v"><strong>Ubicación</strong></a></p>
+                </div>
+            </div>
+            <div class="col col-sm-6 hidden-xs">
+                <div class="info-evento-map">                    
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.020693183215!2d-84.07528458607673!3d9.932234392897644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e36469257cff%3A0x56281078c77f618e!2sEl+Lobo+Estepario!5e0!3m2!1ses-419!2scr!4v1506680570751" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-xs-12 col-sm-6">
+                <div class="afiche">
+                    <img src="images/afiche/cafeconvoz.png" alt="Café con voz" class="info-evento img-responsive">
+                </div>
+                <div class="text-center">
+                    <p><a href="https://goo.gl/maps/C5n4gdz1KZC2"><strong>Ubicación</strong></a></p>
                 </div>
             </div>
             <div class="col col-sm-6 hidden-xs">
                 <div class="info-evento-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1964.9547730537222!2d-84.07634678617947!3d9.941483938057013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e49dcd914ea5%3A0x8fbb946ae91cd66a!2sRestaurante+Papa+Pez!5e0!3m2!1ses-419!2smx!4v1497702672756" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.890922431913!2d-83.92233328607749!3d9.859517892947562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0dfefc1d3ff0b%3A0xe5a7747a686902fb!2sCaf%C3%A9+Con+Voz!5e0!3m2!1ses-419!2scr!4v1506680688801" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -177,6 +184,28 @@
         $('#imagemodal').modal('show'); // imagemodal is the id attribute assigned to the bootstrap modal, then i use the show function
     });
     </script>
+    <div id="fb-root"></div>
+    <script>
+    (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.9&appId=752701358126278";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    $(document).ready(function() {
+        var ubicacion = window.location;
+
+        var divElement = '<div class="fb-comments" data-href="' + ubicacion + '" data-width="600px" data-numposts="1"></div>'
+        
+        var face = $("#facebook");
+        face.innerHTML = divElement;
+
+        console.log(face);
+    })
+    </script>
+    <div id="facebook"></div>
 </body>
 
 </html>
