Se realizan cambios en la interfaz de la página acercade.html, se agrega google analytics a todas las páginas.

--- a/acercade.html
+++ b/acercade.html
@@ -16,6 +16,15 @@
     <!--          Scripts              -->
     <script src="js/lib/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107385271-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-107385271-1');
+    </script>
 </head>
 
 <body>
@@ -63,7 +72,7 @@
             <div class="col-acercade2 col-xs-12">
                 <div class="text-acercade1">
                     <p class="text-justify">
-                        Posteriormente se dan una serie de movimientos en el grupo, la salida de Manuel Illescas y la llegada de <strong>Jair Sherrier</strong> en la guitarra y de <strong>Yanelly Ramírez</strong> como vocalista, iniciando con covers latinoamericanos mientras, a la vez, se seguía promocionando la música instrumental original
+                        Posteriormente se dan una serie de movimientos en el grupo, la salida de Manuel Illescas y la llegada de <strong>Jair Sherrier</strong> en la guitarra y de <strong>Yanelly Ramírez</strong> como vocalista, iniciando con covers latinoamericanos mientras, a la vez, se seguía promocionando la música instrumental original, luego con el paso del tiempo se retiran del grupo <strong>Jair y Yanelly</strong> por asuntos personales y dan paso nuevamente a la música instrumental con la integración de <strong>Anthony Wright</strong> en la trompeta y <strong>Austin Oviedo</strong> en el Saxofón.
                     </p>
                     <p class="text-justify">
                         <h3>¿Por qué Adagio Gitano? </h3> Adagio (del italiano) es un término musical que hace referencia a una indicación de tempo, o bien a un movimiento de una pieza musical. Adagio Gitano maneja muchos de los tempos que se manejan en las canciones se encuentran en Adagio, de esta forma surge y se mantiene el nombre.
@@ -73,7 +82,7 @@
         </div>
         <div class="row">
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/integrantes/jose.png" class="img-responsive image-acerca1" alt="José" />
+                <img src="images/integrantes/jose.jpg" class="img-responsive image-acerca1" alt="José" />
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
                 <div class="text-acercade2">
@@ -92,13 +101,13 @@
                     <p class="text-justify">
                         <strong>2. Carlos Jiménez: Percusionista</strong>
                     </p>
-                    <p>
+                    <p class="text-justify">
                         Su amor por la música y su interés por los instrumentos musicales existe desde su niñez. En específico el área de la percusión inició desde pequeño formando parte cada año de las bandas que desfilan en las celebraciones de cada 15 de septiembre. Sin embargo fue hasta 2009 que se involucré más a fondo con el mundo de la percusión, primero con la batería, posteriormente timbal y cajón peruano. Inició en clases con el maestro Ronald. Desde el 2010 hasta hoy, él lo ha ayudado a desarrollar su sonido. Realmente todos los géneros musicales son de suagrado, no obstante tiene una inclinación especial por los ritmos latinos y sonidos funk.
                     </p>
                 </div>
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/integrantes/carlos.png" class="img-responsive image-acerca1" alt="Carlos" />
+                <img src="images/integrantes/carlos.jpg" class="img-responsive image-acerca1" alt="Carlos" />
             </div>
         </div>
         <div class="row">
@@ -129,8 +138,23 @@
                 </div>
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-                <img src="images/integrantes/gabriel.png" alt="Gabriel" class="img-responsive image-acerca1" />
+                <img src="images/integrantes/gabriel.jpg" alt="Gabriel" class="img-responsive image-acerca1" />
             </div>            
+        </div>
+        <div class="row">        
+            <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
+                <img src="images/integrantes/austin.jpg" class="img-responsive image-acerca1" alt="carolina" />
+            </div>
+            <div class="col-acercade1 col-xs-12 col-sm-6 info">
+                <div class="text-acercade5">
+                    <p class="text-justify">
+                        <strong>4. Austin Oviedo Trigueros</strong>
+                    </p>
+                    <p class="text-justify">
+                        Estudio desde el 2009 Guitarra Clásica y sus derivados hasta la actualidad. En el 2011 incursiono en el sax con el tutor Ricardo Benavides, y hoy en día su saxofón ha sonadopor muchas orquestas y bandas, entre ellas a la Big Band de Ulicori, y algunas otras Orquestas!
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-acercade3 col-xs-12 ">
