--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
     <!--          Scripts              -->
     <script src="js/lib/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107385271-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-107385271-1');
+    </script>
+
 </head>
 
 <body>
@@ -110,22 +120,7 @@
             <div class="col-xs-12 col3 text-center">
                 <h2>Próximos eventos</h2>
             </div>
-        </div>
-        <div class="row">
-            <div class="col col-xs-12 col-sm-6">
-                <div class="afiche">
-                    <img src="images/afiche/loboestepario.png" alt="El Lobo Estepario" class="info-evento img-responsive">
-                </div>
-                <div class="text-center">
-                    <p><a href="https://goo.gl/maps/qVKfpj9q77v"><strong>Ubicación</strong></a></p>
-                </div>
-            </div>
-            <div class="col col-sm-6 hidden-xs">
-                <div class="info-evento-map">                    
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.020693183215!2d-84.07528458607673!3d9.932234392897644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e36469257cff%3A0x56281078c77f618e!2sEl+Lobo+Estepario!5e0!3m2!1ses-419!2scr!4v1506680570751" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
+        </div>       
         <div class="row">
             <div class="col col-xs-12 col-sm-6">
                 <div class="afiche">
